--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,58 @@
     <title>The Ternary Traveler</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
+
+    <header>
+        <h1>The Ternary Traveler</h1>
+        <h3>Where in the world would you like to go?</h3>
+    </header>
+
+    <main id="mainContainer">
+
+        <section id="form_container">
+
+            <input type="hidden" id="interest_id" value="" />
+
+
+            <fieldset id="place_container" class="input_container">
+                <label for="place_input" class="label">Country:</label>
+                <select class="input" id="place_input">
+                    <option value="" disabled selected>Select</option>
+                </select>
+            </fieldset>
+
+            <fieldset id="name_container" class="input_container">
+                <label for="name_input" class="label">Name:</label>
+                <input type="text" id="name_input" class="input">
+            </fieldset>
+
+            <fieldset id="description_container" class="input_container">
+                <label for="description_input" class="label">Description:</label>
+                <input type="text" id="description_input" class="input">
+            </fieldset>
+
+            <fieldset id="cost_container" class="input_container">
+                <label for="cost_input" class="label">Cost: $</label>
+                <input type="text" id="cost_input" class="input">
+            </fieldset>
+
+            <div id="saveButton_container" class="button_container">
+                <button id="save_button" class="button">Save</button>
+            </div>
+
+        </section>
+
+        <h2>Places To Go:</h2>
+
+        <section id="interests_log">
+
+        </section>
+
+    </main>
+
     <script type="module" src="scripts/main.js"></script>
 </body>
+
 </html>
